<resources>
    <string name="app_name">RyebridgeDWA</string>

    <!--Login screen strings-->
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot your password</string>
    <string name="register_new_user">Register a new user</string>

    <!--Change password screen strings-->
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="change_password">Change Password</string>

    <!--Register screen strings-->
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="access_code">Access Code</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>

    <!--Policies screen strings-->
    <string name="policies">Policies</string>
    <string name="induction_acceptance">I have received a Ryebridge safety induction</string>
    <string name="policies_acceptance">I agree to abide by all of the above policies</string>
    <string name="next">Next</string>

    <!--Main screen strings-->
    <string name="view_policies">View Policies</string>
    <string name="report_a_hazard">Report a Hazard</string>
    <string name="disclaimer">Before using this app, make sure it is safe to do so!</string>
    <string name="unsaved_reports_message">You have unsaved hazards that have not been sent yet. Press the button bellow to transmit them.</string>
    <string name="upload_pending_reports">Upload pending reports</string>

    <!--Report screen strings-->
    <string name="details">Details</string>
    <string name="category">Category</string>
    <string name="categories_subtitle">Which category best describes the hazard?</string>
    <string name="photo">Photo</string>
    <string name="skip_photo">Skip Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="photo_description">Photo Description</string>
    <string name="date">Date</string>
    <string name="hazard">Hazard *</string>
    <string name="description">Description</string>
    <string name="actions_taken">Actions Taken</string>
    <string name="review_hazard">Review Hazard</string>
    <string name="review">Review</string>
    <string name="reporter_details">Reporter details:</string>
    <string name="project">Project:</string>
    <string name="category_header">Category:</string>
    <string name="date_found">Date Found:</string>
    <string name="hazard_description">Hazard description:</string>
    <string name="actions_already_taken">Actions Already Taken</string>
    <string name="upload_now">Upload Report Now</string>
    <string name="upload_later">Upload later</string>
    <string name="cancel_report">Cancel report</string>
    <string name="sign_out">Sign Out</string>
    <string name="uploading_report">Uploading report</string>
    <string name="registering">Registering</string>
    <string name="uploading_reports">Uploading reports</string>
    <string name="logging_in">Logging in</string>
</resources>
