<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/registration"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/first_name_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:backgroundTint="@color/gray" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/last_name_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:backgroundTint="@color/gray" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_address_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:backgroundTint="@color/gray" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mobile_number_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:backgroundTint="@color/gray" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:backgroundTint="@color/gray" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/repeat_password_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:backgroundTint="@color/gray" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/access_code_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/access_code"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:backgroundTint="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center_horizontal">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/green_button_color"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_70"
        android:clickable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ProgressBar
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@android:style/Widget.ProgressBar.Large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registering"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>