<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ryebridge_logo"
            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:backgroundTint="@color/gray"
            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password_input_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            app:backgroundTint="@color/gray"
            />

        <TextView
            android:id="@+id/sign_in_link_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/blue_text_color"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/forgot_password_link_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue_text_color"
            android:textSize="20sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/register_user_link_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/register_new_user"
        android:textColor="@color/blue_text_color"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_70"
        android:clickable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ProgressBar
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@android:style/Widget.ProgressBar.Large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logging_in"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
