<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/review"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/reporter_details"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/report_details_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/reporter_details"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/project"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/project_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/project"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/category_header"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/category_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/category"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/date_found"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/date_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="May 07, 2018"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/hazard_description"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/description"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/actions_already_taken"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/actions_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/actions_already_taken"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"/>

                <ImageView
                    android:id="@+id/photo_image_view"
                    android:layout_width="350dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />

                <Button
                    android:id="@+id/upload_now_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green_button_color"
                    android:text="@string/upload_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/upload_later_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/green_button_color"
                    android:text="@string/upload_later"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/cancel_report"
                    android:textAllCaps="false"
                    android:textColor="@color/green_button_color"/>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_70"
        android:clickable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ProgressBar
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@android:style/Widget.ProgressBar.Large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploading_report"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>