<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/disclaimer"
            android:gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ryebridge_logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/upload_all_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/report_hazard_button"
        android:background="@drawable/white_stroked_background"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="@string/unsaved_reports_message"/>

        <Button
            android:id="@+id/upload_all_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@color/blue_2"
            android:text="@string/upload_pending_reports"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

    </LinearLayout>

    <Button
        android:id="@+id/report_hazard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/green_button_color"
        android:text="@string/report_a_hazard"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_above="@+id/sign_out_button"/>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/green_button_color"
        android:text="Sign Out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_above="@+id/footer"/>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/view_policies_link_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/view_policies"
            android:textColor="@color/blue_text_color"
            android:textSize="15sp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/change_password_link_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/change_password"
            android:textColor="@color/blue_text_color"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</RelativeLayout>