<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <WebView
        android:id="@+id/policy_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/switches_layout"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/switches_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next_button"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/policies_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SwitchTheme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/policies_acceptance"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/induction_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SwitchTheme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/induction_acceptance"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/green_button_color"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>